# game-jolt-api-cpp-library

./: .gitignore  GameJoltAPI.cppcheck  LICENSE  LICENSE.txt  README.md  index.html
docs/: Doxyfile  doxygen.h  index.html
docs/doxygen/: DoxygenLayout.xml  doxygen.dox  doxygen.h
examples/: main.cpp  mingw_test.bat
examples/android/: AndroidManifest_additional.xml
examples/android/jni/: Application.mk
examples/android/jni/Main/: Android.mk
examples/cb/: GameJoltAPI.cbp
examples/cmake/: CMakeLists.txt
examples/codeblocks/: GameJoltAPI.cbp
examples/gcc/: CMakeLists.txt  Makefile
examples/mingw_cb/: GameJoltAPI.cbp  mingw_test.bat
examples/msvc/GameJoltAPI/: GameJoltAPI.vcxproj
examples/nb/nbproject/: configurations.xml  project.xml
examples/nb/nbproject/private/: configurations.xml
examples/netbeans/nbproject/: configurations.xml  project.xml
examples/netbeans/nbproject/private/: configurations.xml
examples/tools/: mingw_test.bat
examples/vcc/: GameJoltAPI.sln
examples/vcc/GameJoltAPI/: GameJoltAPI.vcxproj  GameJoltAPI.vcxproj.filters
examples/visualstudio/GameJoltAPI/: GameJoltAPI.vcxproj  GameJoltAPI.vcxproj.filters
libraries/include/curl/: curlbuild.h
libraries/linux/: libcurl.so.4.3.0
libraries/windows/x86/: libcurl.lib
source/: Base64.cpp  Base64.h  CMakeLists.txt  MD5.cpp  MD5.h  coreLookup.h  gjAPI.cpp  gjAPI.h  gjCodeAfter.h  gjCodeBefore.h  gjDataItem.cpp  gjDataItem.h  gjInline.h  gjLookup.h  gjNetwork.cpp  gjNetwork.h  gjNetwork.hpp  gjNetwork.impl.h  gjScore.cpp  gjScore.h  gjTrophy.cpp  gjTrophy.h  gjUser.cpp  gjUser.h
